test/data/semantic-errors/semantic-errors.bool
let lilList:[int]
lilList = [1, 2, 3]
let bigList:[int] = [1, 2, 3, 4, 5]
let flList:[int] = [1.2, 1.4]
let floatList:[float] = [2.3]

let x:int = 3
let x:int = 4
let a = 3.2
x + 3
1 + 2
x * x
x ** x
1.3 + 2.2
x // 3.4
1 % 3
3.4 % 2
1 - 2
x - x

if x == 3:
indent 1
dedent

if x:
indent 1
dedent

fun x (a:int b:int):
indent a + b
dedent

fun x (a:int b:int):
indent ret a + b
dedent

fun y (a:int b:int):
indent ret a + b
dedent

fun xx:int (a:int b:int):
indent ret a + b
dedent

fun yy (a b):
indent ret a + b
dedent

fun z ():
indent ret 1
dedent

fun zz:int ():
indent ret "hello"
dedent

a = z()
a = z(1)
a = z()()
a = 'hi'

while (a):
indent ret a
dedent

do:
indent a = a + 1
dedent while a

do:
indent a = a + 1
dedent until a

testObj :=
indent a : 1
b : 'hello, world'
dedent

let testObj2 = {
indent a : 1
b : 'hello, world'
dedent }
